@@ -9,6 +9,7 @@
 * Add style 't' for Cones() to produce tubes (cylinders).
 * Add style '^' for Legend() to left/right align legend if its coordinates are right/left from the center
 * Add style '<', '^', '>' for aligning/centering boxes in Bars(), Barh(), BoxPlot(), Cones(). Also this plots become centered by default if nx sizes are the same for all data.
+* Improve automatic axis position. Add style '^' for inverse automatic axis position.
 * Add mglData::Refill() for filling by interpolation of parametrically dependent data
 * Add transparency for Area() and Region() plots.
 * Add mgl_clf_chr() function and extend 'clf' command
